; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/m32r/platforms/mappi3/extr_setup.c_enable_mappi3_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/m32r/platforms/mappi3/extr_setup.c_enable_mappi3_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@NR_IRQS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"bad irq 0x%08x\0A\00", align 1
@icu_data = common dso_local global %struct.TYPE_2__* null, align 8
@M32R_ICUCR_IEN = common dso_local global i64 0, align 8
@M32R_ICUCR_ILEVEL6 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @enable_mappi3_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_mappi3_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @NR_IRQS, align 4
  %10 = icmp uge i32 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %7, %1
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @printk(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %30

14:                                               ; preds = %7
  %15 = load i32, i32* %2, align 4
  %16 = call i64 @irq2port(i32 %15)
  store i64 %16, i64* %3, align 8
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @icu_data, align 8
  %18 = load i32, i32* %2, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @M32R_ICUCR_IEN, align 8
  %24 = or i64 %22, %23
  %25 = load i64, i64* @M32R_ICUCR_ILEVEL6, align 8
  %26 = or i64 %24, %25
  store i64 %26, i64* %4, align 8
  %27 = load i64, i64* %4, align 8
  %28 = load i64, i64* %3, align 8
  %29 = call i32 @outl(i64 %27, i64 %28)
  br label %30

30:                                               ; preds = %14, %11
  ret void
}

declare dso_local i32 @printk(i8*, i32) #1

declare dso_local i64 @irq2port(i32) #1

declare dso_local i32 @outl(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
